--- a/src/localization/cart/es.json
+++ b/src/localization/cart/es.json
@@ -1,7 +1,7 @@
 {
   "treatmentsTypes": {
     "treatments": "TRATAMIENTOS",
-    "bonusCards": "TARJETAS",
+    "bonusCards": "BONOS",
     "products": "PRODUCTOS"
   },
   "creditCardLabel": "Carta de debito o credito",
