--- a/src/localization/system/es.json
+++ b/src/localization/system/es.json
@@ -137,6 +137,12 @@
       "windowTitle": "BUSCAR EN EL SITIO",
       "windowDescription": "Encuentre fácilmente el tratamiento o el producto de belleza adecuado para usted y, sobre todo, descubra que somos pioneros en la depilación con hilo y microblading de cejas",
       "url": "buscar"
+    },
+    "gift": {
+      "iconText": "IDEAS REGALO",
+      "windowTitle": "IDEAS REGALO BELLEZA",
+      "windowDescription": "",
+      "url": "ideas-regalo-belleza"
     }
   },
   "treatmentsTypes": [
