--- a/src/localization/system/es.json
+++ b/src/localization/system/es.json
@@ -25,8 +25,8 @@
       "url": "tarjetas"
     },
     "products": {
-      "iconText": "PRODUCTOS",
-      "windowTitle": "PRODUCTOS",
+      "iconText": "TIENDA ONLINE",
+      "windowTitle": "TIENDA ONLINE",
       "windowDescription": "Salón de belleza, realiza servicios tales cómo tratamientos faciales, tratamientos corporales, uñas, maquillaje con las mejores marcas cosméticas del mercado: Carita, Decléor, Fedua, Opi, Biologique Recherche, Channel, Yves Saint Lauren. ",
       "url": "productos"
     },
