--- a/src/localization/team/es.json
+++ b/src/localization/team/es.json
@@ -1,5 +1,5 @@
 {
   "title": "Conoce a las profesionales de In&Out",
   "description": "En In&Out encontrarás grandes profesionales del mundo de la estética y el cuidado de la imagen personal. Cada una de ellas es especialista en un área y entre sus manos te sentirás como en casa.",
-  "user1description": "Especialista Depilación con Hilo"
+  "user_carmen_description": "Especialista Depilación con Hilo"
 }
