--- a/src/localization/cart/es.json
+++ b/src/localization/cart/es.json
@@ -8,7 +8,7 @@
   "payButton": "PAGAR",
   "buy": {
     "title": "Gracias por tu compra:",
-    "qrCode": "Aqui tienes el QR te tu orden que puedes mostrar en nuestro centro:",
+    "qrCode": "Aqui tienes el QR te tu orden:",
     "pdf": "Aqui puedes descargar el resumen te tu compra:",
     "downloadPdf": "DESCARGA EL PDF",
     "sentEmail": "Te hemos enviado un correo a este correo:",
