--- a/src/localization/static.json
+++ b/src/localization/static.json
@@ -5,24 +5,28 @@
   "location1Mobile": "633 90 91 03",
   "location1Latitude": "36.7137894",
   "location1Longitude": "-4.4268794",
-  "location1GoogleReviewUrl":"http://search.google.com/local/writereview?placeid=ChIJB7Rj8ZD3cg0R6eAKD3N_mD4",
-
+  "location1GoogleReviewUrl": "http://search.google.com/local/writereview?placeid=ChIJB7Rj8ZD3cg0R6eAKD3N_mD4",
   "location2Address": "CALLE COMPANIA, 42 - MÁLAGA",
   "location2AddressLabel": "CALLE COMPANIA",
   "location2Phone": "951 387 919",
   "location2Mobile": "695 685 291",
   "location2Latitude": "36.7215296",
   "location2Longitude": "-4.4245817",
-  "location2GoogleReviewUrl":"",
-
+  "location2GoogleReviewUrl": "",
   "location3Address": "CALLE PUERTA DE BUENAVENTURA, 4 - MÁLAGA",
   "location3AddressLabel": "CALLE PUERTA DE BUENAVENTURA",
   "location3Phone": "951 387 919",
   "location3Mobile": "695 685 291",
   "location3Latitude": "36.723974",
   "location3Longitude": "-4.420582",
-  "location3GoogleReviewUrl":"http://search.google.com/local/writereview?placeid=ChIJncIbQTX3cg0RYv19-GiRmJ4",
-
+  "location3GoogleReviewUrl": "http://search.google.com/local/writereview?placeid=ChIJncIbQTX3cg0RYv19-GiRmJ4",
+  "location4Address": "CALLE PUERTA NUEVA, 1 - MÁLAGA",
+  "location4AddressLabel": "CALLE PUERTA NUEVA",
+  "location4Phone": "951394352",
+  "location4Mobile": "695 685 291",
+  "location4Latitude": "36.72134332484761",
+  "location4Longitude": "-4.4246213568642325",
+  "location4GoogleReviewUrl": "",
   "email_info": "info@inandoutbelleza.es",
   "hostUrl": "https://www.inandoutbelleza.es"
 }
