move to nx static

--- a/src/localization/static.json
+++ b/src/localization/static.json
@@ -26,7 +26,7 @@
   "location4Mobile": "695 685 291",
   "location4Latitude": "36.72134332484761",
   "location4Longitude": "-4.4246213568642325",
-  "location4GoogleReviewUrl": "",
+  "location4GoogleReviewUrl": "http://search.google.com/local/writereview?placeid=ChIJg2vUfE_3cg0RpscM6frgYCU",
   "email_info": "info@inandoutbelleza.es",
   "hostUrl": "https://www.inandoutbelleza.es"
 }
